# tauri-background-service

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMPT.md  README.md  SECURITY.md  docs-research-findings.md  ralph.yml  spec.md
.eval-sandbox/review/: findings.md  plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
tauri-plugin-background-service/: Cargo.toml  README.md  build.rs
tauri-plugin-background-service/android/: .gitignore
tauri-plugin-background-service/android/src/main/: AndroidManifest.xml
tauri-plugin-background-service/android/src/main/kotlin/app/tauri/backgroundservice/: BackgroundServicePlugin.kt  LifecycleService.kt
tauri-plugin-background-service/docs/: android.md  api-reference.md  desktop.md  getting-started.md  ios.md  migration-guide.md  troubleshooting.md
tauri-plugin-background-service/examples/: basic_service.rs
tauri-plugin-background-service/guest-js/: index.ts  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
tauri-plugin-background-service/ios/Sources/TauriPluginBackgroundService/: BackgroundServicePlugin.swift
tauri-plugin-background-service/permissions/: default.toml
tauri-plugin-background-service/permissions/autogenerated/: reference.md
tauri-plugin-background-service/permissions/autogenerated/commands/: install_service.toml  service_status.toml  uninstall_service.toml
tauri-plugin-background-service/permissions/schemas/: schema.json
tauri-plugin-background-service/src/: error.rs  lib.rs  manager.rs  mobile.rs  models.rs  notifier.rs  runner.rs  service_trait.rs
tauri-plugin-background-service/src/desktop/: headless.rs  ipc.rs  ipc_client.rs  ipc_server.rs  mod.rs  service_manager.rs
tauri-plugin-background-service/tests/: integration.rs
test-app/: .gitignore  build-and-deploy.sh  index.html  package-lock.json  package.json  run-tests.py
test-app/src-tauri/: Cargo.toml  tauri.conf.json
test-app/src-tauri/capabilities/: default.json
test-app/src-tauri/src/: lib.rs
