[package]
name = "tauri-plugin-background-service"
version = "0.2.0"
edition = "2021"
links = "tauri-plugin-background-service"
description = "Background service lifecycle plugin for Tauri v2 — run long-lived tasks on Android, iOS, and desktop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dardourimohamed/tauri-background-service"
readme = "README.md"
keywords = ["tauri", "background", "service", "android", "ios"]
categories = ["gui", "asynchronous", "os", "api-bindings"]
rust-version = "1.77.2"
authors = ["Mohamed Dardouri <med@dardouri.com>"]
exclude = ["test-app/", "docs/", ".*", "examples/"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-linux-android", "aarch64-apple-ios"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
desktop-service = ["service-manager", "tokio/net"]

[dependencies]
tauri = { version = "2" }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "1"
log = "0.4"
async-trait = "0.1"
service-manager = { version = "0.7", optional = true }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
