[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-background-service = { path = "../../tauri-plugin-background-service" }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
